Created Hanabi Game UI XML file and connect menu XML file. Minor bug fixes

--- a/HanabiEDA/HanabiEDA/HanabiEDA.vcxproj
+++ b/HanabiEDA/HanabiEDA/HanabiEDA.vcxproj
@@ -229,7 +229,10 @@
     <ClCompile Include="Net connection\Server.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Xml Include="example.xml" />
+    <Xml Include="menu_data\connect_menu.xml">
+      <SubType>Designer</SubType>
+    </Xml>
+    <Xml Include="menu_data\hanabi_game_ui.xml" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gui\gui.h" />
