--- a/HanabiEDA/HanabiEDA/HanabiEDA.vcxproj
+++ b/HanabiEDA/HanabiEDA/HanabiEDA.vcxproj
@@ -198,6 +198,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="card.cpp" />
+    <ClCompile Include="deck.cpp" />
     <ClCompile Include="fsm.cpp" />
     <ClCompile Include="Gui\Gui.cpp" />
     <ClCompile Include="Gui\GuiActiveElement.cpp" />
@@ -206,6 +208,7 @@
     <ClCompile Include="Gui\GuiImage.cpp" />
     <ClCompile Include="Gui\GuiSubmenu.cpp" />
     <ClCompile Include="Gui\GuiText.cpp" />
+    <ClCompile Include="handle_game.cpp" />
     <ClCompile Include="handle_menu.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="main2.cpp" />
@@ -241,6 +244,8 @@
     </Xml>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="card.h" />
+    <ClInclude Include="deck.h" />
     <ClInclude Include="Gui\Gui.h" />
     <ClInclude Include="Gui\GuiActiveElement.h" />
     <ClInclude Include="Gui\GuiButton.h" />
@@ -248,6 +253,7 @@
     <ClInclude Include="Gui\GuiImage.h" />
     <ClInclude Include="Gui\GuiSubmenu.h" />
     <ClInclude Include="Gui\GuiText.h" />
+    <ClInclude Include="handle_game.h" />
     <ClInclude Include="handle_menu.h" />
     <ClInclude Include="Net connection\Client.h" />
     <ClInclude Include="Net connection\Net_connection.h" />
