--- a/HanabiEDA/HanabiEDA/HanabiEDA.vcxproj.filters
+++ b/HanabiEDA/HanabiEDA/HanabiEDA.vcxproj.filters
@@ -34,6 +34,12 @@
     <Filter Include="Source Files\Gui">
       <UniqueIdentifier>{85bc1891-5cf5-46e1-bf19-4050ba7316d5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Hanabi">
+      <UniqueIdentifier>{c678ee18-ccec-4da7-8d32-e8f35b701c1a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Hanabi">
+      <UniqueIdentifier>{430bec78-bedf-4c04-88b2-e2102c1d4e08}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Net connection\Client.cpp">
@@ -130,6 +136,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="handle_menu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="card.cpp">
+      <Filter>Source Files\Hanabi</Filter>
+    </ClCompile>
+    <ClCompile Include="deck.cpp">
+      <Filter>Source Files\Hanabi</Filter>
+    </ClCompile>
+    <ClCompile Include="handle_game.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -237,6 +252,15 @@
     </ClInclude>
     <ClInclude Include="handle_menu.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="card.h">
+      <Filter>Header Files\Hanabi</Filter>
+    </ClInclude>
+    <ClInclude Include="deck.h">
+      <Filter>Header Files\Hanabi</Filter>
+    </ClInclude>
+    <ClInclude Include="handle_game.h">
+      <Filter>Header Files\Hanabi</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
